2008-01-12  Michael Goffioul <michael.goffioul@gmail.com>

	* Makefile.in (distclean): Delete graphics-props.cc.

	* genprops.awk: Handle new graphics property classes.

	* graphics.h.in, graphics.cc: Adapt for new specific property types.

2008-01-12  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_config_info): Add GNUPLOT to the struct.
	* oct-conf.h.in (OCTAVE_CONF_GNUPLOT): New macro.

2008-01-11  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__qp__.cc (qp): Undo part of change from
	2007-09-04 (compute Y at each iteration).

2008-01-10  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fsolve.cc (Ffsolve): Doc fix.
	(hybrd_info_to_fsolve_info): Swap return values for -1 and -2 inputs.

	* DLD_FUNCTIONS/__gnuplot_raw__.l: Delete.
	* Makefile.in (DLD_XSRC): Remove it from the list.
	(BUILT_DISTFILES): Remove __gnuplot_raw__.cc from the list.
	(stamp-prereq): Don't depend on __gnuplot_raw__.cc.
	(maintainer-clean): Don't remove __gnuplot_raw__.cc.
	(__gnuplot_raw__.cc): Delete target.
	(__gnuplot_raw__.o, pic/__gnuplot_raw__.o): Delete targets.

	* mex.cc (calc_single_subscript_internal): New static function.
	(mxArray_octave_value::calc_single_subscript): Use it.
	(mxArray_matlab::calc_single_subscript): Use it.

2008-01-07  John W. Eaton  <jwe@octave.org>

	* src/pt-except.cc (tree_try_catch_command::eval):
	Set Vdebug_on_error and Vdebug_on_warning to false while executing
	try block.

	* error.cc (Vdebug_on_error, Vdebug_on_warning): No longer static.
	* error.h: Provide decls.

	* gripes.cc (gripe_wrong_type_arg (const std::string&, const
	octave_value&, bool)): New function.
	* gripes.h: Provide decl.

	* oct-stream.cc (printf_value_cache::printf_value_cache):
	Reject structs, cells, objects, and lists.
	(octave_base_stream::do_printf): Quit early if printf_value_cache
	constructor fails.

	* parse.y (make_anon_fcn_handle): Don't attempt to convert
	expression to assignment to __retval__.

2008-01-07  Michael Goffioul <michael.goffioul@gmail.com>